syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "DrawService.Api.Models.Protos.Draws";

package draws;

service Draws {
    rpc GetDrawOptions(google.protobuf.Empty) returns (DrawOptionsProtoResponse);
    rpc GetPlayerDraw (GetPlayerDrawProtoRequest) returns (GetPlayerDrawProtoResponse);
    rpc CreateDraw(google.protobuf.Empty) returns (GetPlayerDrawProtoResponse);
    rpc JoinDraw (JoinDrawProtoRequest) returns (GetPlayerDrawProtoResponse);
} 

message DrawOptionsProtoResponse {
    int64 ticketPriceInCents = 1;
    int32 minTicketsPerPlayer = 2;
    int32 maxTicketsPerPlayer = 3;
    int32 minPlayersInDraw = 4;
    int32 maxPlayersInDraw = 5;
}

enum DrawStatusProto {
    PENDING = 0;
    IN_PROGRESS = 1;
    COMPLETED = 2;
    CANCELLED = 3;
}

message GetPlayerDrawProtoRequest {
    int32 playerId = 1;
}

message GetPlayerDrawProtoResponse {
    bool success = 1;
    string errorMsg = 2;
    string drawId = 3;
    google.protobuf.Timestamp drawDate = 4;
    DrawStatusProto status = 5;
    int64 ticketPriceInCents = 6;
    int32 minTicketsPerPlayer = 7;
    int32 maxTicketsPerPlayer = 8;
    int32 minPlayersInDraw = 9;
    int32 maxPlayersInDraw = 10;
    int32 currentPlayersInDraw = 11;
}

message JoinDrawProtoRequest {
    string drawId = 1;
    int32 playerId = 2;
    repeated string ticketIds = 3;
}

