syntax = "proto3";

option csharp_namespace = "LotteryGame.Orchestrators.Api.Models.Protos.TicketPurchase";

package funds;

service TicketPurchase {
  rpc Purchase (PurchaseProtoRequest) returns (PurchaseProtoResponse);
}

message PurchaseProtoRequest {
  int32 playerId = 1;
  int32 numberOfTickets = 2;
}

message PurchaseProtoResponse {
  bool success = 1;
  string errorMsg = 2;
  int64 totalCost = 3;
  repeated string ticketNumbers = 4; 
}
