syntax = "proto3";

option csharp_namespace = "LotteryGame.Orchestrators.Api.Models.Protos.Settlement";

package settlement;

service Settlement {
  rpc Settle (PurchaseRequest) returns (PurchaseResponse);
}

message PurchaseRequest {
  int32 playerId = 1;
  int32 numberOfTickets = 2;
}

message PurchaseResponse {
  bool success = 1;
  string errorMsg = 2;
  int64 totalCost = 3;
  repeated string ticketNumbers = 4; 
}
