syntax = "proto3";

option csharp_namespace = "WagerService.Api.Models.Protos.Tickets";

package tickets;

service Tickets {
	rpc Create (TicketCreateProtoRequest) returns (TicketProtoResponse);
	rpc Update (TicketUpdateProtoRequest) returns (TicketProtoResponse);
}

enum TicketStatusProto {
	PENDING = 0;
	CONFIRMED = 1;
	CANCELLED = 2;
	SETTLED = 3;
}

message TicketProto {
	string id = 1;
	string ticketNumber = 2;
	TicketStatusProto status = 3;
}

message TicketCreateProtoRequest {
	int32 playerId = 1;
	string drawId = 2;
	int32 reservationId = 3;
	int32 numberOfTickets = 4;
}

message TicketProtoResponse {
	bool success = 1;
	string errorMsg = 2;
	repeated TicketProto tickets = 3;
}

message TicketUpdateProtoRequest {
	repeated string ticketIds = 1;
	TicketStatusProto status = 2;
}